style.scss
---
# Comment for Jekyll to process the frontmatter
---

$dark: #222222;
$light: #FEFEFE;
$accent: #6ABED8;

$sans-serif: -apple-system, "Helvetica Neue", Helvetica, "Segoe UI", Arial, sans-serif;
$monospace: Monaco, Consolas, monospace;

body {
  margin: 0;
  line-height: 1.2;
  background-color: $light;
  font-family: $sans-serif;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
  display: flex;
  flex-direction: column;
  color: $dark;
  background-color: $light;
}

footer {
  font-size: .8em;
}

code {
  background-color: $dark;
  color: $light;
  font-family: $monospace;
  padding: .2em;
  margin: .1em;
  border-radius: .2em;
  display: inline-block;
}

.content {
  padding: 1rem;
  a {
    color: darken($accent,10%);
    &:visited {
      color: darken($accent,20%);
    }
  }

  h1,h2,h3,h4,h5,h6 {
    a {
      color: inherit;
      text-decoration: none;

      svg {
        height: .5em;
        width: .5em;
        display: none;
      }

      &:visited {
        color: inherit;
      }
    }

    &:hover {
      svg {
        display: inline-block;
      }
    }

    &:target {
      animation: pulse 2s;
    }
  }
}

.aside {
  padding-left: 1em;
  color: $light;
  background-color: $dark;
  margin: 0;

  h1 a {
    color: $light;
    text-decoration: none;

    &:visited {
      color: $light;
    }
  }

  a {
    color: $accent;

    &:visited {
      color: darken($accent,10%);
    }
  }
}

#markdown-toc {
  padding-left: 0;

  // Hide site title and L3 titles
  >li:first-child {
    display: none;
  }
  ul ul {
    display: none;
  }

  ul {
    padding-left: 2em;
  }
  li {
    list-style-type: none;
  }
  a {
    color: $light;
    text-decoration: none;
    display: inline-block;
    padding: 0.2em;
    &:hover {
      text-decoration: underline;
    }
  }
}

@media screen and (min-width: 40em) {
  .aside {
    display: flex;
    align-items: center;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    width: 18rem;
    // padding-left: 0;
    overflow-y: auto; // if viewport height is too low, make scrollable
    ul:first-child {
      margin-bottom: 4rem;
    }
  }
  .aside-content {
    margin: auto;
  }
  .content {
    width: 100%;
    margin-left: 18rem;
    padding: 2rem 2rem;
  }
  body {
    flex-direction: row;
  }
}
@media screen and (min-width: 60em) {
  .aside {
    width: 22rem;
  }
  .content {
    margin-left: 22rem;
    padding: 2rem 6rem;
  }
}

@keyframes pulse {
  50%  {color: $accent;}
  100% {color: $dark;}
}

